--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 .App {
   text-align: center;
   color: black;
-  margin-left: 1in;
-  align-self: center;
 }
 
 .App-logo {
@@ -17,19 +15,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: white;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 
-}
-
-.App-left{
-  margin-left: 1in;
 }
 
 .App-link {
